<resources>
    <string name="app_name">Quizz</string>
    <string name="txtMessage"></string>
    <string name="btnFalse">FALSE</string>
    <string name="btnTrue">TRUE</string>
    <string name="textView">Questions</string>
    <string name="textView2">Deck</string>
    <string name="textView3">Practice</string>
    <string name="textView22">Question</string>
    <string name="textView5">Name</string>
    <string name="textView6">Nota: Nunca estudies de ultimo momento, planifica tus estudios y usa nuestra app ;)</string>
    <string name="textView7">¡Practica hasta conseguirlo!</string>
    <string name="txt_nameConfiguration">How should we call you?</string>
    <string name="textView4">How do we show you questions?</string>
    <string name="btnSave">Save</string>
    <string name="btnSend2"></string>
    <string name="btnDelete2"></string>
    <string name="txtDescription">What is this deck for ...</string>
    <string name="btnQuestion">Edit questions</string>
    <string name="txtQuestion">Name</string>
    <string name="txtQuestion2">Question</string>
    <string name="swTruth">La respuesta es verdadera</string>
    <string name="txtPrimary">TextView</string>
    <string name="imageView"></string>
    <string name="imageView2"></string>
    <string name="imageView3"></string>
    <string name="imageView5"></string>
    <string name="imageView6"></string>
    <string name="imageView4"></string>
    <string name="imageView7"></string>
    <string name="imageView8"></string>
    <string name="imageView9"></string>
    <string name="imageView10"></string>
    <string name="imageView11"></string>
    <string name="imageView12"></string>
    <string name="imageView13"></string>
    <string name="imageView14"></string>
    <string name="imageView15"></string>
    <string name="imageView16"></string>
    <string name="imageView17"></string>
    <string name="imageView18"></string>
    <string name="imageView19"></string>
    <string name="imageView20"></string>
    <string name="imageView21"></string>
    <string name="imageView22"></string>
    <string name="imageView23"></string>
    <string name="imageView24"></string>
    <string name="imageView25"></string>
    <string name="imageView26"></string>
    <string name="imageView27"></string>
    <string name="imageView28"></string>
    <string name="imageView29"></string>
    <string name="imageView30"></string>
    <string name="imageView31"></string>
    <string name="imageView32"></string>
    <string name="imageView33"></string>
    <string name="imageView34"></string>
    <string name="imageView35"></string>
    <string name="imageView36"></string>
    <string name="imageView37"></string>
    <string name="btnDelete"></string>
    <string name="btnSend"></string>
    <string name="btnConfiguration">CONFIGURATION</string>
    <string name="btnPractice">PRACTICE</string>
    <string name="btnDecks">DECKS</string>
    <string name="btnCreate">Create new deck</string>
    <string name="btnCreate2">Create new deck</string>
    <string name="textViewDecks">Decks</string>


</resources>
