<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDD6C6"
    tools:context=".EditDeck">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="277dp"
        android:layout_height="465dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/textView2"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textColorHint="#795548"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/txtQuestion"
            android:inputType="textPersonName"
            android:textColorHint="#795548"
            tools:ignore="TextContrastCheck"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/txt_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:gravity="start|top"
            android:hint="@string/txtDescription"
            android:inputType="textMultiLine"
            android:textColorHint="#795548"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btn_toQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/btnQuestion"
            android:textColorHint="#795548"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="140dp"
            android:layout_height="151dp"
            android:contentDescription="@string/imageView6"
            app:srcCompat="@drawable/pregunta__1_" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contentDescription="@string/btnCreate"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contentDescription="@string/btnDelete"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageView10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/hojas" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageView11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/hojas__1_" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageView12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.984"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.992"
        app:srcCompat="@drawable/hojas__2_" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageView13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        app:srcCompat="@drawable/hojas__3_" />

</androidx.constraintlayout.widget.ConstraintLayout>
