<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDD6C6"
    tools:context=".EditQuestion">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="279dp"
        android:layout_height="356dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="68dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/textView22"
            android:textAlignment="center"
            android:textColor="#795548"
            android:textColorHint="#795548"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/txt_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/txtQuestion2"
            android:inputType="textPersonName"
            android:textColorHint="#795548"
            tools:ignore="DuplicateSpeakableTextCheck"
            android:importantForAutofill="no" />

        <Switch
            android:id="@+id/sw_truth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:hint="@string/swTruth"
            android:minHeight="48dp"
            android:textColor="#795548"
            android:textColorHint="#795548" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_send2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contentDescription="@string/btnSend2"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send"
        tools:ignore="ImageContrastCheck,SpeakableTextPresentCheck" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_delete2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="52dp"
        android:clickable="true"
        android:contentDescription="@string/btnDelete2"
        android:focusable="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_delete"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="117dp"
        android:layout_height="122dp"
        android:contentDescription="@string/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.732"
        app:srcCompat="@drawable/pensando" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/hortensia" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageView18"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/hortensia__1_"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageView19"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993"
        app:srcCompat="@drawable/hortensia__2_"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="82dp"
        android:layout_height="92dp"
        android:contentDescription="@string/imageView20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.981"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/hortensia__3_" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="124dp"
        android:layout_height="123dp"
        android:contentDescription="@string/imageView3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.731"
        app:srcCompat="@drawable/pregunta__2_" />

</androidx.constraintlayout.widget.ConstraintLayout>
